<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_choices"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/food_and_or_drink_consumed"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/food_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="@+id/food_search"
        app:layout_constraintStart_toStartOf="@+id/food_search"
        app:layout_constraintTop_toBottomOf="@+id/food_search">

    </ScrollView>

    <Button
        android:id="@+id/add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/add_food">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/remove_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remove"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <Button
        android:id="@+id/food_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>